need massive re-code, save for future

--- a/public/servers/user_created/sliwek/nazwa/server.properties
+++ b/public/servers/user_created/sliwek/nazwa/server.properties
@@ -37,7 +37,7 @@ spawn-protection=16
 max-world-size=29999984
 gamemode=survival
 #here starts user customization 
-level-name=serwer
+level-name=nazwa
 motd=
 pvp=true
 difficulty=normal
